--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,15 @@
-:root{
+:root {
   --background-dark: #101010;
+  --background-1-dark: #2b2b2b;
   --color-dark: #ececec;
+  --color-1-dark: #383838;
+  --color-2-dark: #353535;
+  
+  --background-light: #ffffff;
+  --background-1-light: #e9e9e9;
+  --color-light: #161616;
+  --color-1-light: #464646;
+  --color-2-light: #5e5e5e;
 }
 
 html,
@@ -34,7 +43,7 @@ body,
 .app-title {
   margin: auto;
   margin-top: 32pt;
-  color: #383838;
+  color: var(--color-1-dark);
 }
 
 .app-name
@@ -55,23 +64,18 @@ body,
   width: 100%;
   padding: 0;
   font-family: 'Roboto Mono', monospace;
-  background-color: var(--background-dark);
   color: var(--color-dark);
 }
 
 .emote-container
 .emote-copy
-input[type='text'] {
-  text-align: center;
-  border: none;
-  text-decoration: none;
-  outline: none;
-}
-
-.emote-container
-.emote-copy
-input[type='text']:disabled {
-  color: white !important;
+#emote-copy-input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+  left: 50%;
+  width: 50pt;
+  margin-left: -25pt;
 }
 
 .emote-container
@@ -92,7 +96,7 @@ input[type='text']:disabled {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  background-color: #555;
+  background-color: var(--background-1-dark);
   left: 50%;
   text-align: center;
   width: 60pt;
@@ -113,7 +117,7 @@ input[type='text']:disabled {
   margin-left: -5pt;
   border-width: 5pt;
   border-style: solid;
-  border-color: #555 transparent transparent transparent;
+  border-color: var(--background-1-dark) transparent transparent transparent;
 }
 
 .emote-container
@@ -133,7 +137,7 @@ input[type='text']:disabled {
 .app-footer a, .app-footer span {
   margin: auto 0pt;
   text-decoration: none;
-  color: #353535;
+  color: var(--color-2-dark);
   font-weight: 300;
 }
 
@@ -156,8 +160,36 @@ input[type='text']:disabled {
 }
 
 @media (prefers-color-scheme: light) {
-  body {
-    background-color: #ffffff;
-    color: #000000;
+  #root {
+    background-color: var(--background-light);
+    color: var(--color-light);
   }
+
+  .app-name 
+  .app-title {
+    color: var(--color-1-light);
+  }
+
+  .app-footer a, .app-footer span {
+    color: var(--color-2-light);
+  }
+
+  .emote-container
+  .emote-copy
+  #emote-display {
+    color: var(--color-light);
+  }
+
+  .emote-container
+  .emote-copy
+  .emote-tooltip {
+    background-color: var(--background-1-light);
+  }
+
+  .emote-container
+  .emote-copy
+  .emote-tooltip::after {
+    border-color: var(--background-1-light) transparent transparent transparent;
+  }
+
 }
