--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,7 +7,7 @@
   
   --background-light: #ffffff;
   --background-1-light: #e9e9e9;
-  --color-light: #161616;
+  --color-light: #363636;
   --color-1-light: #464646;
   --color-2-light: #5e5e5e;
 }
@@ -76,6 +76,7 @@ body,
   left: 50%;
   width: 50pt;
   margin-left: -25pt;
+  font-size: 21px;
 }
 
 .emote-container
@@ -93,9 +94,9 @@ body,
 .emote-container
 .emote-copy
 .emote-tooltip {
+  position: absolute;
   visibility: hidden;
   opacity: 0;
-  position: absolute;
   background-color: var(--background-1-dark);
   left: 50%;
   text-align: center;
@@ -104,7 +105,7 @@ body,
   border-radius: 5pt;
   bottom: 54%;
   z-index: 1;
-  margin-left: -30pt;
+  margin-left: -35pt;
 }
 
 .emote-container
@@ -170,7 +171,8 @@ body,
     color: var(--color-1-light);
   }
 
-  .app-footer a, .app-footer span {
+  .app-footer a,
+  .app-footer span {
     color: var(--color-2-light);
   }
 
