--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,16 +1,5 @@
-:root {
-  --background-dark: #101010;
-  --background-1-dark: #2b2b2b;
-  --color-dark: #ececec;
-  --color-1-dark: #383838;
-  --color-2-dark: #353535;
-  
-  --background-light: #ffffff;
-  --background-1-light: #e9e9e9;
-  --color-light: #363636;
-  --color-1-light: #464646;
-  --color-2-light: #5e5e5e;
-}
+@import url('./colors.css');
+@import url('./emote.css');
 
 html,
 body,
@@ -49,83 +38,6 @@ body,
 .app-name
 .app-title:hover {
   cursor: pointer;
-}
-
-.emote-container {
-  display: grid;
-  height: 100%;
-  place-content: center;
-}
-
-.emote-container
-.emote-copy
-#emote-display {
-  font-size: 40pt;
-  width: 100%;
-  padding: 0;
-  font-family: 'Roboto Mono', monospace;
-  color: var(--color-dark);
-}
-
-.emote-container
-.emote-copy
-#emote-copy-input {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-  left: 50%;
-  width: 50pt;
-  margin-left: -25pt;
-  font-size: 21px;
-}
-
-.emote-container
-.emote-copy
-#emote-display:hover {
-  cursor: pointer;
-}
-
-.emote-container
-.emote-copy
-#emote-display:active {
-  font-size: 39pt;
-}
-
-.emote-container
-.emote-copy
-.emote-tooltip {
-  position: absolute;
-  visibility: hidden;
-  opacity: 0;
-  background-color: var(--background-1-dark);
-  left: 50%;
-  text-align: center;
-  width: 60pt;
-  padding: 5pt;
-  border-radius: 5pt;
-  bottom: 54%;
-  z-index: 1;
-  margin-left: -35pt;
-}
-
-.emote-container
-.emote-copy
-.emote-tooltip::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5pt;
-  border-width: 5pt;
-  border-style: solid;
-  border-color: var(--background-1-dark) transparent transparent transparent;
-}
-
-.emote-container
-.emote-copy:hover
-.emote-tooltip {
-  visibility: visible;
-  opacity: 1;
 }
 
 .app-footer {
@@ -174,24 +86,6 @@ body,
   .app-footer a,
   .app-footer span {
     color: var(--color-2-light);
-  }
-
-  .emote-container
-  .emote-copy
-  #emote-display {
-    color: var(--color-light);
-  }
-
-  .emote-container
-  .emote-copy
-  .emote-tooltip {
-    background-color: var(--background-1-light);
-  }
-
-  .emote-container
-  .emote-copy
-  .emote-tooltip::after {
-    border-color: var(--background-1-light) transparent transparent transparent;
   }
 
 }
