--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,13 +1,19 @@
 :root {
   --background-dark: #101010;
-  --background-1-dark: #2b2b2b;
+  --background-1-dark: #181818;
+  --background-2-dark: #252525;
+  --background-3-dark: #2b2b2b;
   --color-dark: #ececec;
-  --color-1-dark: #383838;
-  --color-2-dark: #353535;
-  
+  --color-1-dark: #252525;
+  --color-2-dark: #383838;
+  --color-3-dark: #5a5a5a;
+
   --background-light: #ffffff;
-  --background-1-light: #e9e9e9;
+  --background-1-light: #f7f7f7;
+  --background-2-light: #d4d4d4;
+  --background-3-light: #c0c0c0;
   --color-light: #363636;
-  --color-1-light: #464646;
-  --color-2-light: #5e5e5e;
+  --color-1-light: #ebebeb;
+  --color-2-light: #8a8a8a;
+  --color-3-light: #5a5a5a;
 }
