--- a/src/styles/add-custom.css
+++ b/src/styles/add-custom.css
@@ -1,16 +1,42 @@
 .app-add-custom {
+  margin: 0;
+}
+
+.app-add-custom .add-container {
   position: absolute;
   bottom: 0;
   width: 100%;
   margin-bottom: 10em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.app-add-custom .add-container .add-button {
+  width: 32pt;
+  height: 32pt;
+  padding: 3.5pt;
+  margin: auto;
+}
+
+
+/* 
+.app-add-custom .app-editor-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.app-add-custom .add-button {
-  width: 32pt;
-  height: 32pt;
-  padding: 3.5pt;
-}
+.app-add-custom .app-editor-container .app-editor {
+  margin-top: 2em;
+  background-color: cyan;
+  border-radius: 5pt;
+  width: 95%;
+  height: 80%;
+  z-index: 2;
+} */
