--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,4 +1,4 @@
-.app-button {
+/* .system-theme .app-button {
   background-color: var(--background-dark);
   color: var(--color-1-dark);
   border: none;
@@ -7,25 +7,23 @@
   padding: 0;
 }
 
-.app-button:hover {
+.system-theme .app-button:hover {
   color: var(--color-3-dark);
 }
 
-.app-button:active {
+.system-theme .app-button:active {
   background-color: var(--background-1-dark);
 }
 
 @media (prefers-color-scheme: light) {
-  .app-button {
+  .system-theme .app-button {
     background-color: var(--background-light);
     color: var(--color-1-light);
   }
-  
-  .app-button:hover {
+  .system-theme .app-button:hover {
     color: var(--color-3-light);
   }
-  
-  .app-button:active {
+  .system-theme .app-button:active {
     background-color: var(--background-1-light);
   }
-}
+} */
