--- a/src/styles/emote.css
+++ b/src/styles/emote.css
@@ -9,6 +9,7 @@
   width: 100%;
   padding: 0;
   font-family: 'Roboto Mono', monospace;
+  color: var(--text);
 }
 
 .emote-container .emote-copy #emote-copy-area {
@@ -41,6 +42,7 @@
   bottom: 60%;
   z-index: 1;
   margin-left: -35pt;
+  background-color: var(--bg-1);
 }
 
 .emote-container .emote-copy .emote-tooltip::after {
@@ -51,6 +53,7 @@
   margin-left: -5pt;
   border-width: 5pt;
   border-style: solid;
+  border-color: var(--bg-1) transparent transparent transparent;
 }
 
 .emote-container .emote-copy:hover .emote-tooltip {
