--- a/src/styles/theme-dropdown.css
+++ b/src/styles/theme-dropdown.css
@@ -1,5 +1,4 @@
 .theme-dropdown {
-  /* background-color: red; */
   height: 100%;
   display: flex;
   flex-direction: row-reverse;
@@ -12,23 +11,31 @@
   margin-right: 21pt;
   font-size: 11pt;
   padding: 2pt 4pt;
-  border-radius: 3pt;
+  color: var(--text-3);
 }
 
 .theme-dropdown p:hover {
   cursor: pointer;
+  color: var(--text-hover);
 }
 
 .theme-content {
   margin-top: 10pt;
   margin-left: -10pt;
   position: absolute;
-  min-width: 90pt;
+  min-width: 110pt;
+  max-height: 60vh;
   z-index: 1;
   border-radius: 5pt;
+  background-color: var(--bg-0);
+  overflow: scroll;
 }
 
 .theme-content p {
   margin: 0;
   padding: 3pt 5pt;
+}
+
+.theme-content p:hover {
+  background-color: var(--bg-1);
 }
