--- a/src/styles/themes/auto.css
+++ b/src/styles/themes/auto.css
@@ -4,26 +4,36 @@
   --grey-2: #363a4e;
   --grey-3: #393e53;
   --grey-4: #3f445b;
-  --grey-5: hsl(229, 18%, 40%);
-  --grey-6: hsl(229, 18%, 50%);
-  --grey-7: hsl(229, 18%, 60%);
-  --grey-8: hsl(229, 18%, 70%);
-  --grey-9: hsl(229, 18%, 80%);
+  --grey-5: #545a78;
+  --grey-6: #697196;
+  --grey-7: #878dab;
+  --grey-8: #a5aac0;
+  --grey-9: #c3c6d5;
   --black: #2b2d3a;
   --red: #ff6188;
-  --red-1: #fc5d7c;
-  --red-2: #55393d;
-  --green: #a7df78;
-  --green-1: #9ed072;
-  --green-2: #394634;
+  --red-1: hsl(348, 96%, 68%);
+  --red-2: hsl(348, 96%, 63%);
+  --red-3: hsl(351, 20%, 28%);
+  --green: hsl(93, 62%, 67%);
+  --green-1: hsl(92, 50%, 63%);
+  --green-2: hsl(92, 50%, 33%);
+  --green-3: hsl(103, 15%, 24%);
   --yellow: #e7c664;
-  --yellow-1: #4e432f;
+  --yellow-1: hsl(45, 73%, 55%);
+  --yellow-2: hsl(45, 73%, 35%);
+  --yellow-3: hsl(39, 25%, 25%);
   --blue: #76cce0;
-  --blue-1: #85d3f2;
-  --blue-2: #354157;
-  --magenta: #b39df3;
-  --magenta-1: #4e432f;
+  --blue-1: hsl(197, 81%, 74%);
+  --blue-2: hsl(197, 81%, 64%);
+  --blue-3: #354157;
+  --magenta: hsl(255, 78%, 78%);
+  --magenta-1: hsl(255, 78%, 68%);
+  --magenta-2: hsl(255, 78%, 48%);
+  --magenta-2: hsl(255, 78%, 38%);
   --orange: #f39660;
+  --orange-1: hsl(22, 86%, 56%);
+  --orange-2: hsl(22, 86%, 46%);
+  --orange-3: hsl(22, 86%, 36%);
   --white: #e3e1e4;
 }
 
