--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,6 @@
-@import url('./themes/auto.css');
-@import url('./emote.css');
-@import url('./add-custom.css');
+@import url('./themes/themes.css');
 @import url('./button.css');
 @import url('./modifiers.css');
-@import url('./themes/nord.css');
-@import url('./themes/solarized.css');
 html,
 body,
 #root {
@@ -20,32 +16,6 @@ body,
   display: flex;
   flex-direction: column;
   height: 100%;
-}
-
-.app-name {
-  position: absolute;
-  display: flex;
-  place-content: center;
-  width: 100%;
-  height: 64pt;
-  font-size: 21pt;
-  font-weight: 300;
-}
-
-.app .options {
-  width: 256pt;
-}
-
-.app-name .app-title {
-  margin: auto;
-  margin-top: 32pt;
-  font-size: 23pt;
-  font-weight: 300;
-  color: var(--text-2);
-}
-
-.app-name .app-title:hover {
-  cursor: pointer;
 }
 
 .app-footer {
