--- a/src/styles/themes/auto.css
+++ b/src/styles/themes/auto.css
@@ -30,6 +30,7 @@
   --magenta-1: hsl(255, 78%, 68%);
   --magenta-2: hsl(255, 78%, 48%);
   --magenta-2: hsl(255, 78%, 38%);
+  --cyan: #f39660;
   --orange: #f39660;
   --orange-1: hsl(22, 86%, 56%);
   --orange-2: hsl(22, 86%, 46%);
