--- a/src/styles/themes/base16.css
+++ b/src/styles/themes/base16.css
@@ -1,5 +1,7 @@
 :root {
   --black-gruvbox: #282828;
+  --black-gruvbox-1: hsl(0, 0%, 26%);
+  --black-gruvbox-2: hsl(0, 0%, 36%);
   --red-gruvbox: #cc241d;
   --green-gruvbox: #98971a;
   --yellow-gruvbox: #d79921;
@@ -12,11 +14,11 @@
 
 .gruvbox-theme {
   --bg: var(--black-gruvbox);
-  --bg-0: var(--grey-1);
-  --bg-1: var(--grey-2);
+  --bg-0: var(--black-gruvbox-1);
+  --bg-1: var(--black-gruvbox-2);
   --text: var(--white-gruvbox);
-  --text-1: var(--red-gruvbox);
-  --text-2: var(--green-gruvbox);
-  --text-3: var(--yellow-gruvbox);
-  --text-hover: var(--magenta-gruvbox);
+  --text-title: var(--red-gruvbox);
+  --text-theme: var(--blue-gruvbox);
+  --text-hover: var(--white-gruvbox);
+  --text-footer: var(--orange-gruvbox);
 }
