--- a/src/styles/themes/zenburn.css
+++ b/src/styles/themes/zenburn.css
@@ -1,5 +1,7 @@
 :root {
   --black-zenburn: #3F3F3F;
+  --black-zenburn-1: hsl(0, 0%, 28%);
+  --black-zenburn-2: hsl(0, 0%, 32%);
   --red-zenburn: #CC9393;
   --green-zenburn: #7F9F7F;
   --yellow-zenburn: #F0DFAF;
@@ -11,11 +13,11 @@
 
 .zenburn-theme {
   --bg: var(--black-zenburn);
-  --bg-0: var(--grey-1);
-  --bg-1: var(--grey-2);
+  --bg-0: var(--black-zenburn-1);
+  --bg-1: var(--black-zenburn-2);
   --text: var(--white-zenburn);
-  --text-1: var(--red-zenburn);
-  --text-2: var(--green-zenburn);
-  --text-3: var(--yellow-zenburn);
-  --text-hover: var(--orange-zenburn);
+  --text-title: var(--green-zenburn);
+  --text-theme: var(--magenta-zenburn);
+  --text-hover: var(--white-zenburn);
+  --text-footer: var(--blue-zenburn);
 }
