Add more transition animation for colors
Add info link to the themes
Add source to the icons.tsx

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,6 +27,7 @@
   font-size: 23pt;
   font-weight: 300;
   color: var(--text-title);
+  transition: color 125ms ease-in;
 }
 
 .app-name .app-title:hover {
