--- a/src/styles/themes/dracula.css
+++ b/src/styles/themes/dracula.css
@@ -22,4 +22,5 @@
   --text-theme: var(--blue-darcula);
   --text-hover: var(--orange-darcula);
   --text-footer: var(--purple-darcula);
+  --info-hover: var(--green-darcula);
 }
