--- a/src/styles/themes/themes.css
+++ b/src/styles/themes/themes.css
@@ -2,6 +2,6 @@
 @import url('./nord.css');
 @import url('./solarized.css');
 @import url('./zenburn.css');
-@import url('./base16.css');
+@import url('./gruvbox.css');
 @import url('./dracula.css');
 @import url('./eva.css');
