--- a/src/styles/themes/auto.css
+++ b/src/styles/themes/auto.css
@@ -47,6 +47,7 @@
   --text-theme: var(--grey-5);
   --text-hover: var(--grey-7);
   --text-footer: var(--grey-5);
+  --info-hover: var(--blue);
 }
 
 @media (prefers-color-scheme: light) {
@@ -59,5 +60,6 @@
     --text-theme: var(--grey-7);
     --text-hover: var(--grey-3);
     --text-footer: var(--grey-7);
+    --info-hover: var(--green-2);
   }
 }
