--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,42 +1,33 @@
-.app-add-custom {
+.app-custom {
+  position: absolute;
   margin: 0;
+  width: 100%;
+  margin-bottom: 15em;
+  bottom: 0;
 }
 
-.app-add-custom .add-container {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  margin-bottom: 10em;
+.app-custom .add-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.app-add-custom .add-container .add-button {
+.add-button {
   width: 32pt;
   height: 32pt;
-  padding: 3.5pt;
+  padding: 2pt;
   margin: auto;
+  background-color: var(--bg);
+  color: var(--bg-1);
+  transition: color 100ms ease-in;
 }
 
-
-/* 
-.app-add-custom .app-editor-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.add-button:hover {
+  background-color: var(--bg-0);
+  color: var(--text-hover);
 }
 
-.app-add-custom .app-editor-container .app-editor {
-  margin-top: 2em;
-  background-color: cyan;
-  border-radius: 5pt;
-  width: 95%;
-  height: 80%;
-  z-index: 2;
-} */
+.add-button:active {
+  background-color: var(--bg);
+  color: var(--text);
+}
