--- a/src/styles/emote.css
+++ b/src/styles/emote.css
@@ -1,6 +1,12 @@
 .emote-container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  justify-content: center;
+}
+
+.emote-container .emote-copy {
+  margin: auto;
   place-content: center;
 }
 
@@ -39,7 +45,7 @@
   width: 60pt;
   padding: 5pt;
   border-radius: 5pt;
-  bottom: 60%;
+  bottom: 58%;
   z-index: 1;
   margin-left: -35pt;
   background-color: var(--bg-1);
