--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,7 +19,10 @@ body,
 }
 
 .app-footer {
-  height: 32pt;
+  /* position: absolute;
+  bottom: 0; */
+  width: 100%;
+  height: 42pt;
   display: flex;
   flex-direction: row;
   place-content: center;
