--- a/src/styles/theme-dropdown.css
+++ b/src/styles/theme-dropdown.css
@@ -3,18 +3,13 @@
 }
 
 .theme-dropdown {
-  height: 100%;
   display: flex;
   flex-direction: row-reverse;
+  width: 100%;
 }
 
 .theme-dropdown p {
   margin: 0;
-  margin-top: 12pt;
-  margin-bottom: auto;
-  margin-right: 21pt;
-  font-size: 11pt;
-  padding: 2pt 4pt;
 }
 
 .theme-dropdown p,
@@ -29,8 +24,6 @@
 }
 
 .theme-content {
-  margin-top: 10pt;
-  margin-left: -10pt;
   position: absolute;
   min-width: 110pt;
   max-height: 60vh;
@@ -40,9 +33,9 @@
   overflow: scroll;
 }
 
-.theme-content p {
+.theme-element p {
   margin: 0;
-  padding: 5pt 10pt;
+  padding: 5pt 8pt;
   width: 100%;
 }
 
@@ -53,13 +46,19 @@
 .theme-content .theme-element {
   display: flex;
   flex-direction: row;
+  text-align: left;
+  justify-content: center;
 }
 
 .theme-element .theme-info {
-  width: 21pt;
-  height: 21pt;
-  margin: 0;
-  margin-right: 5pt;
+  margin: auto;
+  margin-right: 2pt;
+}
+
+.theme-element .theme-info svg {
+  margin: auto;
+  width: 16pt;
+  height: 16pt;
 }
 
 .theme-element .theme-info:hover {
